# Charly-Alexa

./: .env.example  .firebaseignore  .firebaserc  .gitignore  FIRESTORE_RULES_AUDIT_STRIPE_NOTES.md  INTEGRACION_STRIPE_NOTIFICACIONES.md  README.md  apphosting.yaml  firebase-storage.rules  firebase.json  firestore-rules-analysis.md  firestore.rules  package-lock.json  package.json  storage.rules
app/: globals.css  layout.tsx  page.tsx
components/: CartDrawer.tsx  FeaturedPromoGrid.tsx  FirebaseProductDetailLoader.tsx  FloatingActions.tsx  GenderEntryCards.tsx  GenderProductSection.tsx  HeroSection.tsx  HomeProductHighlights.tsx  IntroCurtain.tsx  Navbar.tsx  ProductCard.tsx  ProductDetailClient.tsx  ProductImageFrame.tsx  ProductVisual.tsx  PublicChrome.tsx  ShoppingBenefitsBar.tsx  SiteFooter.tsx  SizeGuideModal.tsx  StoreInfoSection.tsx
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 001_initial.sql
desktop/src-tauri/src/: lib.rs  main.rs
hooks/: useSiteSettings.ts
lib/: admin-api-auth.ts  admin-auth.ts  admin-notifications.ts  delivery-address.ts  email.ts  firebase-admin.ts  firebase-messaging-client.ts  firebase-types.ts  firebase.ts  order-receipt-email.ts  pricing.ts  product-mappers.ts  products.ts  receipts.ts  safe-errors.ts  shipping.ts  site.ts  stripe-orders.ts  stripe.ts  variant-utils.ts  wholesale.ts
public/: firebase-messaging-sw.js
(+54 files in other folders)
