[package]
name = "charly-alexa-pos"
version = "0.1.0"
description = "Punto de venta offline para Charly Alexa"
authors = ["Charly Alexa"]
edition = "2021"

[lib]
name = "charly_alexa_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
