[package]
name = "charly-alexa-pos"
version = "0.1.1"
description = "Punto de venta offline para Charly Alexa"
authors = ["Charly Alexa"]
edition = "2021"

[lib]
name = "charly_alexa_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
